@@ -1,29 +1,6 @@
 <?php /* ]
-[ General ]
-application_name		= "phpBMS"
-encryption_seed			= "freeble"
-record_limit			= "50"
-default_load_page		= "modules/base/snapshot.php"
-
-[ Invoice ]
-invoice_default_printinstruc	= "Thank You For Your Order."
-
-[ mySQL ]
-mysql_server			= "localhost"
-mysql_database			= "phpbms"
-mysql_user			= "bms"
-mysql_userpass			= "bmspass"
-
-[ Company ]
-company_name			= "Kreotek LLC"
-company_address			= "481 Rio Rancho Blvd. NE"
-company_csz			= "Rio Rancho, NM 87124"
-company_phone			= "505.994.6388"
-
-[ Shipping ]
-shipping_markup			= "1.1"
-shipping_postalcode		= "87124"
-
-[ Display ]
-stylesheet			= "mozilla"
+mysql_server	= "localhost"
+mysql_database	= "phpbms"
+mysql_user		= "bms"
+mysql_userpass	= "bmspass"
  end] */ ?>
