@@ -1,0 +1,9 @@
+INSERT INTO `settings` VALUES (1, 'application_name', 'phpBMS');
+INSERT INTO `settings` VALUES (2, 'encryption_seed', 'freeble');
+INSERT INTO `settings` VALUES (3, 'record_limit', '50');
+INSERT INTO `settings` VALUES (4, 'default_load_page', 'modules/base/snapshot.php');
+INSERT INTO `settings` VALUES (5, 'company_name', 'Kreotek LLC');
+INSERT INTO `settings` VALUES (6, 'company_address', '481 Rio Rancho Blvd. NE');
+INSERT INTO `settings` VALUES (7, 'company_csz', 'Rio Rancho, NM 87124');
+INSERT INTO `settings` VALUES (8, 'company_phone', '505.994.6388');
+INSERT INTO `settings` VALUES (11,'stylesheet', 'mozilla'); 
