@@ -1,0 +1,3 @@
+INSERT INTO `settings` VALUES (9, 'shipping_markup', '1.1');
+INSERT INTO `settings` VALUES (10,'shipping_postalcode', '87124');
+INSERT INTO `settings` VALUES (12,'invoice_default_printinstruc', 'Thank You For Your Order.'); 
